@@ -126,7 +126,10 @@ epc_test_run ()
     epc_test_loop = g_main_loop_new (NULL, FALSE);
 
   g_timeout_add_seconds (5, epc_test_timeout_cb, NULL);
+
+  epc_shell_leave ();
   g_main_loop_run (epc_test_loop);
+  epc_shell_enter ();
 
   return epc_test_result;
 }
